--- a/m1/index.html
+++ b/m1/index.html
@@ -79,7 +79,7 @@
         </div>
         <div class="layer"></div>
     </div>
-    <script src="https://code.jquery.com/jquery-1.12.4.js" integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU=" crossorigin="anonymous"></script>
+    <script src="https://cdn.bootcss.com/zepto/1.2.0/zepto.js"></script>
     <script>
         $('.btn').on('tap', function() {
             $('.dialog-wrap').css('display', 'block');
