--- a/m1/index.html
+++ b/m1/index.html
@@ -81,12 +81,12 @@
     </div>
     <script src="https://cdn.bootcss.com/zepto/1.2.0/zepto.js"></script>
     <script>
-        $('.btn').on('tap', function() {
+        $('.btn').on('click', function() {
             $('.dialog-wrap').css('display', 'block');
             $('.demo').css('position', 'fixed');
         });
 
-        $('.close-btn').on('tap', function() {
+        $('.close-btn').on('click', function() {
             $('.dialog-wrap').css('display', 'none');
             $('.demo').css('position', 'static');
         });
