--- a/m7/91/index.html
+++ b/m7/91/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,22 +8,141 @@
     <title>移动端响应式小项目</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.css">  
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
 </head>
+
 <body>
 
     <div id="app">
-        <div class="box"></div>
-        <div class="footer">
-            <div class="footericon">
-                <a href="" class="icon-a">1</a>
+        <div class="box">
+            <div class="header">
+                <a href="" class="header_address">北京</a>
+                <a href="" class="header_form">
+                    <input type="text">
+                </a>
+                <a href="" class="header_message">
+                    <i class="icon-comment-alt icon-large"></i>
+                </a>
             </div>
-            <div class="footericon"></div>
-            <div class="footericon"></div>
-            <div class="footericon"></div>
+            <div class="banner">
+                <div class="inner clearfix">
+                    <div class="innerwraper">
+                        <img src="img/banner1.jpg" alt="">
+                    </div>
+                    <div class="innerwraper">
+                        <img src="img/banner2.jpg" alt="">
+                    </div>
+                    <div class="innerwraper">
+                        <img src="img/banner3.jpg" alt="">
+                    </div>
+                    <div class="innerwraper">
+                        <img src="img/banner4.jpg" alt="">
+                    </div>
+                    <div class="innerwraper">
+                        <img src="img/banner1.jpg" alt="">
+                    </div>
+                </div>
+                <div class="pagination">
+                    <span class="active"></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+            <div class="content">
+                <div><img src="img/1.png" alt=""><span>html</span></div>
+                <div><img src="img/2.png" alt=""><span>php</span></div>
+                <div><img src="img/3.png" alt=""><span>android</span></div>
+                <div><img src="img/4.png" alt=""><span>mysql</span></div>
+                <div><img src="img/5.png" alt=""><span>java</span></div>
+            </div>
+            <div class="title">
+                <span>精品课程</span>
+                <span>查看全部>></span>
+            </div>
+            <div class="items">
+                <div class="item">
+                    <div class="item_left"></div>
+                    <div class="item_center">
+                        <p>jquery实战课程</p>
+                        <p>讲师:luuck</p>
+                        <p>
+                            <i class="icon-hand-up icon-larg"></i>微信：dasxs
+                        </p>
+                        <p>
+                            <i class="icon-hand-up icon-larg"></i>时间：3点整
+                        </p>
+                    </div>
+                    <div class="item_right">
+                        <span>8</span>
+                        <em>折</em>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item_left"></div>
+                    <div class="item_center">
+                        <p>jquery实战课程</p>
+                        <p>讲师:luuck</p>
+                        <p>
+                            <i class="icon-hand-up icon-larg"></i>微信：dasxs
+                        </p>
+                        <p>
+                            <i class="icon-hand-up icon-larg"></i>时间：3点整
+                        </p>
+                    </div>
+                    <div class="item_right">
+                        <span>8</span>
+                        <em>折</em>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item_left"></div>
+                    <div class="item_center">
+                        <p>jquery实战课程</p>
+                        <p>讲师:luuck</p>
+                        <p>
+                            <i class="icon-hand-up icon-larg"></i>微信：dasxs
+                        </p>
+                        <p>
+                            <i class="icon-hand-up icon-larg"></i>时间：3点整
+                        </p>
+                    </div>
+                    <div class="item_right">
+                        <span>8</span>
+                        <em>折</em>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="footericon iconactive">
+                <a href="" class="icon_a">
+                    <i class="icon-camera-retro icon-large"></i>
+                </a>
+                我的
+            </div>
+            <div class="footericon">
+                <a href="" class="icon_a">
+                    <i class="icon-suitcase icon-large"></i>
+                </a>
+                相机
+            </div>
+            <div class="footericon">
+                <a href="" class="icon_a">
+                    <i class="icon-lightbulb icon-large"></i>
+                </a>
+                我的
+            </div>
+            <div class="footericon">
+                <a href="" class="icon_a">
+                    <i class="icon-suitcase icon-large"></i>
+                </a>
+                我的
+            </div>
         </div>
     </div>
-
+    <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="js/index.js"></script>
 </body>
+
 </html>
